@@ -24,6 +24,7 @@ New features:
 OpenSearchServer 1.2.4
 
 New features:
+- 3489873: A scheduler task to copy terms to an index
 - 3487772: Advanced spell check
 - 3487219: RegExp filter for DatabaseCrawler
 - 3483920: BoostQuery support
@@ -33,6 +34,7 @@ New features:
 - 3469777: Scored snippets
 
 Bug fixes:
+- 3489854: A faster indexation when using XML upload
 - 3485241: Pages with meta noindex are indexed
 - 3483798: HTML parser prints many logs
 - 3483259: Underscore added when using synonyms on expression
